<resources>
    <string name="app_name">AsteroidAlert</string>

    <string name="next_week_asteroids">View asteroids remaining this week</string>
    <string name="today_asteroids">View today asteroids</string>
    <string name="saved_asteroids">View saved asteroids</string>
    <string name="close_approach_data_title">Close approach date</string>
    <string name="absolute_magnitude_title">Absolute magnitude</string>
    <string name="estimated_diameter_title">Estimated diameter</string>
    <string name="relative_velocity_title">Relative velocity</string>
    <string name="distance_from_earth_title">Distance from earth</string>
    <string name="astronomical_unit_format">%f au</string>
    <string name="km_unit_format">%f km</string>
    <string name="km_s_unit_format">%f km/s</string>
    <string name="image_of_the_day">Astronomy Picture of the Day</string>
    <string name="astronomica_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
    <string name="astronomical_unit_explanation_button">Astronomical unit definition</string>
    <string name="potentially_hazardous_asteroid_image">Potentially hazardous asteroid image</string>
    <string name="not_hazardous_asteroid_image">Not hazardous asteroid image</string>
    <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
    <string name="nasa_picture_of_day_content_description_format">NASA\'s astronomy picture of the day</string>
    <string name="learn_more_about_today_s_image">Learn more about today\'s image</string>
    <string name="default_apod_description">Nasa\'s astronomy picture of the day is one of the most popular websites at the agency. Each day a different image or photograph of our fascinating universe is featured, along with a brief explantion written by a professional astronomer</string>
    <string name="find_out_more_about_astronomical_units">Find out more about astronomical units</string>
    <string name="potentially_hazardous_asteroid_description">Image indicating that this asteroid is potentially dangerous</string>
    <string name="safe_asteroid_description">Image indicating that this asteroid has no potential for danger</string>
    <string name="asteroid_dangerous">this asteroid is potentially dangerous to planet earth</string>
    \<string name="asteroid_safe">this asteroid does not pose any danger to planet earth</string>
</resources>
